<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/table_row_bg"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvLogDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvLogUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/user"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvLogDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvLogStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/status"
        android:textSize="14sp" />
</LinearLayout>