<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/table_row_bg"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvHeart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/heart_rate"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/steps"
        android:textSize="14sp" />
</LinearLayout>